@@ -20,5 +20,7 @@ along with GCC; see the file COPYING3.  If not see
 #include "rtl.h"
 #include "diagnostic-core.h"
 
-extern void error_for_asm (const_rtx, const char *, ...) ATTRIBUTE_GCC_DIAG(2,3);
-extern void warning_for_asm (const_rtx, const char *, ...) ATTRIBUTE_GCC_DIAG(2,3);
+extern void error_for_asm (const rtx_insn *, const char *,
+			   ...) ATTRIBUTE_GCC_DIAG(2,3);
+extern void warning_for_asm (const rtx_insn *, const char *,
+			     ...) ATTRIBUTE_GCC_DIAG(2,3);
